# spotify-cli-app

./: .gitignore  .python-version  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: workflow.yml
src/: spotify_cli.py
tests/: test_spotify_cli.py
