[tool.poetry]
name = "spotify-cli"
version = "0.1.0"
description = "Allows users to access their Spotify data, including top tracks, top artists, and search functionality, directly from the command line."
authors = ["Elian Manzueta <eliandmanzueta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
spotipy = "^2.23.0"
rich = "^13.7.0"
python_dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
